# telluride_decoding

./: .gitignore  BUILD.bazel  CONTRIBUTING.md  MANIFEST.in  README.md  Telluride_Decoding_Toolbox_TF2_Demo.ipynb  WORKSPACE  __init__.py  add_trigger_test.py  bazel-bin  bazel-out  bazel-telluride_decoding  bazel-testlogs  cca.py  cca_test.py  decoding.py  decoding_test.py  ingest.py  ingest_test.py  utils.py  utils_test.py
doc/: DecodingCodelab.md  decoding.md
telluride_decoding/: __init__.py  add_trigger.py  attention_decoder.py  brain_data.py  brain_model.py  cca.py  csv_util.py  decoding.py  infer.py  infer_decoder.py  ingest.py  ingest_brainvision.py  plot_util.py  preprocess.py  preprocess_audio.py  regression.py  regression_data.py  result_store.py  scaled_lda.py  setup.py  utils.py
test/: add_trigger_test.py  attention_decoder_test.py  brain_data_test.py  brain_model_test.py  cca_test.py  csv_util_test.py  decoding_test.py  infer_decoder_test.py  infer_test.py  ingest_brainvision_test.py  ingest_test.py  plot_util_test.py  preprocess_audio_test.py  preprocess_test.py  regression_data_test.py  regression_test.py  result_store_test.py  scaled_lda_test.py  utils_test.py
test_data/: brainvision_test.eeg  brainvision_test.vhdr  brainvision_test.vmrk
test_data/csv_results/: run1.csv  run2.csv
test_data/jens_memory/: README.txt
test_data/linear_model/: saved_model.pb
test_data/linear_model/variables/: variables.data-00000-of-00001  variables.index
test_data/meg/: subj01_1ksamples.tfrecords
test_data/mismatch_csv_results/: run2.csv
test_data/telluride4/: README.txt
