# Testing instructions for the telluride_decoding toolkit source files.

py_library(
    name = "decoding_lib",
    srcs = [
        "telluride_decoding/attention_decoder.py",
        "telluride_decoding/brain_data.py",
        "telluride_decoding/brain_model.py",
        "telluride_decoding/cca.py",
        "telluride_decoding/csv_util.py",
        "telluride_decoding/decoding.py",
        "telluride_decoding/infer.py",
        "telluride_decoding/infer_decoder.py",
        "telluride_decoding/ingest.py",
        "telluride_decoding/ingest_brainvision.py",
        "telluride_decoding/plot_util.py",
        "telluride_decoding/preprocess.py",
        "telluride_decoding/preprocess_audio.py",
        "telluride_decoding/regression.py",
        "telluride_decoding/regression_data.py",
        "telluride_decoding/result_store.py",
        "telluride_decoding/scaled_lda.py",
        "telluride_decoding/utils.py",
    ],
)

py_test(
    name = "attention_decoder_test",
    srcs = ["test/attention_decoder_test.py"],
    deps = [
        ":decoding_lib",
    ]
)

py_test(
    name = "brain_data_test",
    srcs = ["test/brain_data_test.py"],
    deps = [
        ":decoding_lib",
    ],
    data = [
        "test_data/brainvision_test.eeg",
        "test_data/brainvision_test.vhdr",
        "test_data/meg/subj01_1ksamples.tfrecords",
        "test_data/meg/subj02_1ksamples.tfrecords",
        "test_data/meg/subj03_1ksamples.tfrecords",
    ],
)

py_test(
    name = "brain_model_test",
    srcs = ["test/brain_model_test.py"],
    deps = [
        ":decoding_lib",
    ]
)

py_test(
    name = "cca_test",
    size = "medium",
    srcs = ["test/cca_test.py"],
    data = [
    ],
    python_version = "PY3",
    deps = [
        ":decoding_lib",
    ],
)

py_test(
    name = "csv_util_test",
    srcs = ["test/csv_util_test.py"],
    deps = [":decoding_lib"],
    data = glob(["test_data/csv_results/**",
                 "test_data/mismatch_csv_results/**"]),
)

py_test(
    name = "decoding_test",
    size = "medium",
    srcs = ["test/decoding_test.py"],
    data = [
        "test_data/meg/subj01_1ksamples.tfrecords",
    ],
    deps = [
        ":decoding_lib",
    ],
)

py_test(
    name = "infer_decoder_test",
    srcs = ["test/infer_decoder_test.py"],
    deps = [":decoding_lib"],
    data = [
        # Note these test files were generated by a run of the regression
        # program and represent a valid decoding model. But since these saved
        # model files are fixed, this test will not reflect changes to the
        # decoder model. Caveat emptor!!!!
        "test_data/linear_model/saved_model.pb",
        "test_data/linear_model/variables/variables.data-00000-of-00001",
        "test_data/linear_model/variables/variables.index",
    ],

)

py_test(
    name = "infer_test",
    srcs = ["test/infer_test.py"],
    deps = [
        ":decoding_lib",
    ],
    data = [
        "test_data/meg/subj01_1ksamples.tfrecords",
        "test_data/meg/subj02_1ksamples.tfrecords",
        "test_data/meg/subj03_1ksamples.tfrecords",
    ],

)

py_test(
    name = "ingest_brainvision_test",
    size = "medium",
    srcs = ["test/ingest_brainvision_test.py"],
    data = [
        "test_data/brainvision_test.eeg",
        "test_data/brainvision_test.vhdr",
        "test_data/brainvision_test.vmrk",
        "test_data/meg/subj01_1ksamples.wav",
    ],
    deps = [
        ":decoding_lib",
    ],
)

py_test(
    name = "ingest_test",
    size = "medium",
    srcs = ["test/ingest_test.py"],
    data = [
        "test_data/meg/subj01_1ksamples.wav",
        "test_data/sample.edf",
        "test_data/tapestry.wav",
    ],
    deps = [
        ":decoding_lib",
    ],
)

py_test(
    name = "plot_util_test",
    srcs = ["test/plot_util_test.py"],
    deps = [":decoding_lib"],
)

py_test(
    name = "preprocess_audio_test",
    srcs = ["test/preprocess_audio_test.py"],
    deps = [":decoding_lib"],
)

py_test(
    name = "preprocess_test",
    srcs = ["test/preprocess_test.py"],
    deps = [":decoding_lib"],
)

py_test(
    name = "regression_data_test",
    srcs = ["test/regression_data_test.py"],
    deps = [":decoding_lib"],
    data = [
        "test_data/jens_memory/data_01.mat",
        "test_data/telluride4/Telluride2015.mat",
    ],
)

py_test(
    name = "regression_test",
    srcs = ["test/regression_test.py"],
    deps = [":decoding_lib"],
)

py_test(
    name = "result_store_test",
    srcs = ["test/result_store_test.py"],
    deps = [":decoding_lib"],
)

py_test(
    name = "scaled_lda_test",
    srcs = ["test/scaled_lda_test.py"],
    deps = [":decoding_lib"],
)

py_test(
    name = "utils_test",
    srcs = ["test/utils_test.py"],
    deps = [":decoding_lib"],
)


